--- a/app/components/Button.css
+++ b/app/components/Button.css
@@ -7,11 +7,17 @@ button {
 }
 
 .content-container {
-  font-size: 1rem;
-  margin-bottom: 1rem;
-  padding: 1rem;
+  font-size: 2rem;
+  padding-left: 16px;
+  padding-right: 16px;
+  /* margin-bottom: 1rem; */
+  /* padding: 1rem; */
 }
 
 .add-color {
   background-color: yellow;
+}
+
+.btn-container {
+  display: flex;
 }
